DB_LOGIN_SIGNUP_RESETPASS

--- a/AttendanceTrackerOfficial/App.config
+++ b/AttendanceTrackerOfficial/App.config
@@ -5,6 +5,18 @@
             <section name="AttendanceTrackerOfficial.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
+
+	<connectionStrings>
+		<add name="UserInformationDB"
+			 connectionString="Data Source=DESKTOP-279O6NS\SQLEXPRESS;
+                             Initial Catalog=UserInformationDB;
+                             Integrated Security=True;
+                             Encrypt=False;
+                             TrustServerCertificate=True;"
+			 providerName="System.Data.SqlClient" />
+	</connectionStrings>
+	
+	
     <userSettings>
         <AttendanceTrackerOfficial.Properties.Settings>
             <setting name="username" serializeAs="String">
