--- a/AttendanceTrackerOfficial/AttendanceTrackerOfficial.csproj
+++ b/AttendanceTrackerOfficial/AttendanceTrackerOfficial.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.1" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="7.0.0-preview2.25289.6" />
   </ItemGroup>
 
   <ItemGroup>
