LOCALDB//LOGIN DATABASE

--- a/AttendanceTrackerOfficial/App.config
+++ b/AttendanceTrackerOfficial/App.config
@@ -8,16 +8,16 @@
 
 	<connectionStrings>
 		<add name="UserInformationDB"
-			 connectionString="Data Source=DESKTOP-279O6NS\SQLEXPRESS;
-                             Initial Catalog=UserInformationDB;
-                             Integrated Security=True;
-                             Encrypt=False;
-                             TrustServerCertificate=True;"
+			 connectionString="Data Source=(localdb)\MSSQLLocalDB;
+                         Initial Catalog=UserInformationDB;
+                         Integrated Security=True;
+                         TrustServerCertificate=True;"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
-	
-	
-    <userSettings>
+
+
+
+	<userSettings>
         <AttendanceTrackerOfficial.Properties.Settings>
             <setting name="username" serializeAs="String">
                 <value />
