--- a/AttendanceTrackerOfficial/App.config
+++ b/AttendanceTrackerOfficial/App.config
@@ -8,10 +8,7 @@
 
 	<connectionStrings>
 		<add name="UserInformationDB"
-			 connectionString="Data Source=(localdb)\MSSQLLocalDB;
-                         Initial Catalog=UserInformationDB;
-                         Integrated Security=True;
-                         TrustServerCertificate=True;"
+			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\davin\OneDrive\Pictures\ドキュメント\UserInformationDB.mdf;Integrated Security=True;Connect Timeout=30"
 			 providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
