--- a/AttendanceTrackerOfficial/App.config
+++ b/AttendanceTrackerOfficial/App.config
@@ -1,30 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <configSections>
-        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
-            <section name="AttendanceTrackerOfficial.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
-        </sectionGroup>
-    </configSections>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+      <section name="AttendanceTrackerOfficial.Properties.Settings" 
+               type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" 
+               allowExeDefinition="MachineToLocalUser" 
+               requirePermission="false" />
+    </sectionGroup>
+  </configSections>
 
-	<connectionStrings>
-		<add name="UserInformationDB"
-			 connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=C:\Users\davin\OneDrive\Pictures\ドキュメント\UserInformationDB.mdf;Integrated Security=True;Connect Timeout=30"
-			 providerName="System.Data.SqlClient" />
-	</connectionStrings>
+  <!-- ✅ Use SQL Server connection -->
+  <connectionStrings>
+    <add name="UserInformationDB"
+         connectionString="Server=YOUR_SERVER_NAME;Database=UserInformationDB;User Id=YOUR_USERNAME;Password=YOUR_PASSWORD;TrustServerCertificate=True;MultipleActiveResultSets=True;"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
 
-
-
-	<userSettings>
-        <AttendanceTrackerOfficial.Properties.Settings>
-            <setting name="username" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="password" serializeAs="String">
-                <value />
-            </setting>
-            <setting name="RememberMe" serializeAs="String">
-                <value>True</value>
-            </setting>
-        </AttendanceTrackerOfficial.Properties.Settings>
-    </userSettings>
+  <userSettings>
+    <AttendanceTrackerOfficial.Properties.Settings>
+      <setting name="username" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="password" serializeAs="String">
+        <value />
+      </setting>
+      <setting name="RememberMe" serializeAs="String">
+        <value>True</value>
+      </setting>
+    </AttendanceTrackerOfficial.Properties.Settings>
+  </userSettings>
 </configuration>
